# LpCVT

./: .gitignore  README.md
data/: readme.txt
sources/LpCVT/: CMakeLists.txt  INSTALL_WIN.txt  main.cpp  readme.txt
sources/LpCVT/combinatorics/: delaunay_CGAL.cpp
sources/LpCVT/common/: line_stream.h
videos/: README.md
